--- a/discovery-landing.html
+++ b/discovery-landing.html
@@ -47,7 +47,7 @@
   <!-- Back to Platform -->
   <div class="fixed top-0 left-0 right-0 z-[60] bg-slate-900 text-white text-sm py-2 px-6">
     <div class="max-w-6xl mx-auto">
-      <a href="upcoming-features.html" class="inline-flex items-center gap-1.5 text-slate-400 hover:text-white transition-colors duration-200 cursor-pointer">
+      <a href="index.html" class="inline-flex items-center gap-1.5 text-slate-400 hover:text-white transition-colors duration-200 cursor-pointer">
         <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18"/></svg>
         Back to Platform Overview
       </a>
