--- a/motionlogic.html
+++ b/motionlogic.html
@@ -49,7 +49,7 @@ tailwind.config = {
 <!-- Back to Platform -->
 <div class="sticky top-0 z-[60] bg-navy text-white text-sm py-2 px-4 sm:px-6 lg:px-8">
   <div class="max-w-6xl mx-auto">
-    <a href="upcoming-features.html" class="inline-flex items-center gap-1.5 text-slate-400 hover:text-white transition-colors duration-200 cursor-pointer">
+    <a href="index.html" class="inline-flex items-center gap-1.5 text-slate-400 hover:text-white transition-colors duration-200 cursor-pointer">
       <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18"/></svg>
       Back to Platform Overview
     </a>
