--- a/motionlogic.html
+++ b/motionlogic.html
@@ -6,13 +6,18 @@
 <title>MotionLogic&reg; &mdash; Procedural Intelligence Framework</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon">
 <script src="https://cdn.tailwindcss.com"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Geist:wght@400;450;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="shared-styles.css">
 <script>
 tailwind.config = {
   theme: {
     extend: {
       colors: {
         navy: '#111726',
-        primary: { DEFAULT: '#1976D2', dark: '#1565C0' },
+        surface: { base: '#f8fafc', elevated: '#ffffff' },
+        primary: { DEFAULT: '#1976D2', dark: '#1565C0', muted: '#1976D233' },
         brand: {
           dark: '#111726',
           blue: '#1672d7',
@@ -23,33 +28,31 @@ tailwind.config = {
         },
       },
       fontFamily: {
-        brand: ['Mont', 'system-ui', 'sans-serif'],
-        serif: ['Georgia', 'Times New Roman', 'serif'],
+        serif: ['Instrument Serif', 'Georgia', 'serif'],
+        sans: ['Geist', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'sans-serif'],
         mono: ['SFMono-Regular', 'Consolas', 'Liberation Mono', 'monospace'],
+      },
+      boxShadow: {
+        'sm': '0 1px 2px 0 rgb(0 0 0 / 0.03)',
+        'md': '0 4px 6px -1px rgb(0 0 0 / 0.05), 0 2px 4px -2px rgb(0 0 0 / 0.03)',
+        'lg': '0 10px 15px -3px rgb(0 0 0 / 0.05), 0 4px 6px -4px rgb(0 0 0 / 0.03)',
       },
     },
   },
 }
 </script>
 <style>
-  @font-face {
-    font-family: 'Mont';
-    src: url('Mont-SemiBold.ttf') format('truetype');
-    font-weight: 600;
-    font-style: normal;
-    font-display: swap;
-  }
   @media (max-width: 640px) {
     .flow-wrap { flex-wrap: wrap; }
   }
 </style>
 </head>
-<body class="bg-stone-50 text-stone-900 antialiased leading-relaxed text-lg">
+<body class="bg-surface-base text-stone-900 font-sans antialiased leading-relaxed text-lg">
 
 <!-- Back to Platform -->
 <div class="sticky top-0 z-[60] bg-navy text-white text-sm py-2 px-4 sm:px-6 lg:px-8">
   <div class="max-w-6xl mx-auto">
-    <a href="index.html" class="inline-flex items-center gap-1.5 text-slate-400 hover:text-white transition-colors duration-200 cursor-pointer">
+    <a href="index.html" class="back-link inline-flex items-center gap-1.5 text-slate-400 hover:text-white cursor-pointer">
       <svg class="w-4 h-4" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M10.5 19.5L3 12m0 0l7.5-7.5M3 12h18"/></svg>
       Back to Platform Overview
     </a>
@@ -57,33 +60,34 @@ tailwind.config = {
 </div>
 
 <!-- NAV -->
-<nav class="sticky top-8 z-50 bg-white/95 backdrop-blur border-b border-gray-200" aria-label="Main navigation">
+<nav class="sticky top-8 z-50 bg-white/90 backdrop-blur-sm border-b border-gray-200/60 transition-all duration-200" aria-label="Main navigation">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 flex items-center justify-between h-16">
     <div class="flex items-center gap-4">
       <img src="legawrite-logo-horizontal.png" alt="LegaWrite" class="h-7 w-auto">
-      <div class="hidden sm:block h-5 w-px bg-gray-300"></div>
-      <span class="hidden sm:block text-sm font-medium text-gray-600">Procedural Intelligence Framework</span>
+      <div class="hidden sm:block h-5 w-px bg-gray-300/60"></div>
+      <span class="hidden sm:block text-sm font-medium text-gray-500 tracking-tight">Procedural Intelligence Framework</span>
     </div>
     <div class="flex items-center gap-6">
-      <a href="#how" class="hidden md:inline text-sm text-gray-600 hover:text-gray-900 transition-colors duration-200 cursor-pointer">How It Works</a>
-      <a href="#features" class="hidden md:inline text-sm text-gray-600 hover:text-gray-900 transition-colors duration-200 cursor-pointer">Capabilities</a>
-      <a href="#interfaces" class="hidden md:inline text-sm text-gray-600 hover:text-gray-900 transition-colors duration-200 cursor-pointer">Interfaces</a>
-      <a href="#contact" class="inline-flex items-center px-4 py-2 text-sm font-semibold text-white bg-primary hover:bg-primary-dark rounded-lg transition-colors duration-200 cursor-pointer">Contact</a>
+      <a href="#how" class="hidden md:inline text-sm font-medium text-gray-600 hover:text-primary link-primary cursor-pointer">How It Works</a>
+      <a href="#features" class="hidden md:inline text-sm font-medium text-gray-600 hover:text-primary link-primary cursor-pointer">Capabilities</a>
+      <a href="#interfaces" class="hidden md:inline text-sm font-medium text-gray-600 hover:text-primary link-primary cursor-pointer">Interfaces</a>
+      <a href="#contact" class="hidden sm:inline-flex items-center px-4 py-2 text-sm font-semibold text-white bg-primary hover:bg-primary-dark rounded-md cta-btn cursor-pointer">Contact</a>
     </div>
   </div>
 </nav>
 
 <!-- HERO -->
-<section class="pt-24 pb-20 px-6">
-  <div class="max-w-5xl mx-auto">
-    <p class="text-sm uppercase tracking-[0.15em] text-stone-400 mb-5">Procedural Intelligence Framework</p>
-    <h1 class="font-serif text-5xl sm:text-6xl font-bold text-slate-800 tracking-tight leading-[1.12] max-w-3xl mb-6">Procedure Is Infrastructure</h1>
-    <p class="text-stone-500 text-xl max-w-2xl leading-relaxed mb-10">
+<section class="relative pt-24 pb-20 px-6 hero-gradient">
+  <div class="absolute inset-0 hero-grid" aria-hidden="true"></div>
+  <div class="relative max-w-5xl mx-auto">
+    <p class="text-sm font-semibold uppercase tracking-wider text-primary mb-5 badge">Procedural Intelligence Framework</p>
+    <h1 class="font-serif text-4xl sm:text-5xl lg:text-6xl font-medium text-navy tracking-tight leading-[1.12] max-w-3xl mb-6">Procedure Is Infrastructure</h1>
+    <p class="text-gray-600 text-lg sm:text-xl max-w-2xl leading-relaxed mb-10">
       A procedural execution layer that identifies the correct motion, enforces court authority and scope, and prevents irreversible filing errors&mdash;before they happen.
     </p>
     <div class="flex flex-wrap gap-3 mb-12">
-      <a href="#how" class="inline-block text-base font-semibold tracking-wide bg-brand-dark text-white px-6 py-3 rounded-sm hover:bg-slate-700 transition">See How It Works</a>
-      <a href="#flow" class="inline-block text-base font-semibold tracking-wide border border-stone-300 text-slate-800 px-6 py-3 rounded-sm hover:bg-stone-100 transition">View Procedural Flow</a>
+      <a href="#how" class="inline-block text-base font-semibold tracking-wide bg-primary text-white px-6 py-3 rounded-md cta-btn hover:bg-primary-dark transition">See How It Works</a>
+      <a href="#flow" class="inline-block text-base font-semibold tracking-wide border border-gray-300/80 text-navy px-6 py-3 rounded-md hover:bg-gray-50 hover:border-gray-400 transition">View Procedural Flow</a>
     </div>
 
     <!-- Flow Diagram -->
@@ -381,13 +385,14 @@ tailwind.config = {
 </section>
 
 <!-- BOTTOM CTA -->
-<section class="bg-slate-800 text-white py-20 px-6" id="contact">
-  <div class="max-w-5xl mx-auto text-center">
-    <h2 class="font-serif text-3xl font-bold text-white mb-4">Procedure Determines Outcome</h2>
-    <p class="text-slate-400 text-base mb-8">See how MotionLogic enforces procedural correctness before filing.</p>
+<section class="relative bg-navy text-white py-20 px-6" id="contact">
+  <div class="absolute inset-0 cta-gradient" aria-hidden="true"></div>
+  <div class="relative max-w-5xl mx-auto text-center">
+    <h2 class="text-2xl sm:text-3xl font-semibold text-white mb-4">Procedure Determines Outcome</h2>
+    <p class="text-gray-400 text-base mb-8 leading-relaxed">See how MotionLogic enforces procedural correctness before filing.</p>
     <div class="flex flex-wrap gap-3 justify-center">
-      <a href="#" class="inline-block text-base font-semibold tracking-wide bg-white text-slate-800 px-6 py-3 rounded-sm hover:bg-stone-100 transition">Request a Procedural Walkthrough</a>
-      <a href="#" class="inline-block text-base font-semibold tracking-wide border border-slate-600 text-white px-6 py-3 rounded-sm hover:bg-slate-700 transition">See a MotionLogic Execution</a>
+      <a href="#" class="inline-block text-base font-semibold tracking-wide bg-white text-navy px-6 py-3 rounded-md cta-btn hover:bg-gray-100 transition">Request a Procedural Walkthrough</a>
+      <a href="#" class="inline-block text-base font-semibold tracking-wide border border-white/20 text-white px-6 py-3 rounded-md hover:border-white/40 transition">See a MotionLogic Execution</a>
     </div>
   </div>
 </section>
