--- a/style-humanizer.html
+++ b/style-humanizer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +9,8 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Geist:wght@400;450;500;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="shared-styles.css">
 
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -19,9 +20,12 @@
                 extend: {
                     colors: {
                         // LegaWrite Brand Colors
-                        'lw-navy': '#0A1628',
-                        'lw-blue': '#00A3FF',
-                        'lw-blue-dark': '#0077CC',
+                        'navy': '#111726',
+                        'lw-navy': '#111726',
+                        'lw-blue': '#1976D2',
+                        'lw-blue-dark': '#1565C0',
+                        'surface': { base: '#f8fafc', elevated: '#ffffff' },
+                        'primary': { DEFAULT: '#1976D2', dark: '#1565C0', muted: '#1976D233' },
                         'lw-gray': {
                             50: '#F8FAFC',
                             100: '#F1F5F9',
@@ -36,48 +40,20 @@
                         }
                     },
                     fontFamily: {
-                        'sans': ['Inter', 'system-ui', 'sans-serif'],
-                    }
+                        'serif': ['Instrument Serif', 'Georgia', 'serif'],
+                        'sans': ['Geist', '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', 'Roboto', 'sans-serif'],
+                    },
+                    boxShadow: {
+                        'sm': '0 1px 2px 0 rgb(0 0 0 / 0.03)',
+                        'md': '0 4px 6px -1px rgb(0 0 0 / 0.05), 0 2px 4px -2px rgb(0 0 0 / 0.03)',
+                        'lg': '0 10px 15px -3px rgb(0 0 0 / 0.05), 0 4px 6px -4px rgb(0 0 0 / 0.03)',
+                    },
                 }
             }
         }
     </script>
-
-    <style>
-        /* Custom Mont font for logo if available */
-        @font-face {
-            font-family: 'Mont';
-            src: url('./assets/fonts/Mont-SemiBold.ttf') format('truetype');
-            font-weight: 600;
-            font-style: normal;
-        }
-
-        .font-mont {
-            font-family: 'Mont', 'Inter', sans-serif;
-        }
-
-        /* Smooth scroll */
-        html {
-            scroll-behavior: smooth;
-        }
-
-        /* Focus visible for keyboard nav */
-        :focus-visible {
-            outline: 2px solid #00A3FF;
-            outline-offset: 2px;
-        }
-
-        /* Reduced motion */
-        @media (prefers-reduced-motion: reduce) {
-            *, *::before, *::after {
-                animation-duration: 0.01ms !important;
-                animation-iteration-count: 1 !important;
-                transition-duration: 0.01ms !important;
-            }
-        }
-    </style>
 </head>
-<body class="bg-lw-gray-50 text-lw-gray-900 antialiased">
+<body class="bg-surface-base text-lw-gray-900 font-sans antialiased">
 
     <!-- Navigation -->
     <nav class="fixed top-4 left-4 right-4 z-50">
@@ -109,15 +85,16 @@
     </nav>
 
     <!-- Hero Section -->
-    <section class="pt-32 pb-20 px-4">
-        <div class="max-w-6xl mx-auto">
+    <section class="relative pt-32 pb-20 px-4 hero-gradient">
+        <div class="absolute inset-0 hero-grid" aria-hidden="true"></div>
+        <div class="relative max-w-6xl mx-auto">
             <div class="grid lg:grid-cols-2 gap-12 items-center">
                 <!-- Hero Content -->
                 <div>
-                    <p class="text-sm font-semibold text-lw-blue uppercase tracking-wide mb-4">
+                    <p class="text-sm font-semibold text-lw-blue uppercase tracking-wider mb-4 badge">
                         Motion Style Humanizer
                     </p>
-                    <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold text-lw-navy leading-tight mb-6">
+                    <h1 class="font-serif text-4xl md:text-5xl lg:text-6xl font-medium text-navy leading-tight mb-6">
                         AI That Writes<br>
                         <span class="text-lw-blue">Like You</span>
                     </h1>
@@ -125,13 +102,13 @@
                         Upload your briefs. We extract <strong>your</strong> patterns, <strong>your</strong> phrases, <strong>your</strong> argumentative style. Then every AI draft sounds like you wrote it, not a machine.
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="#how-it-works" class="inline-flex items-center justify-center px-6 py-3 text-base font-semibold text-white bg-lw-blue hover:bg-lw-blue-dark rounded-lg transition-colors duration-200 cursor-pointer">
+                        <a href="#how-it-works" class="inline-flex items-center justify-center px-6 py-3 text-base font-semibold text-white bg-lw-blue hover:bg-lw-blue-dark rounded-md cta-btn cursor-pointer">
                             See How Your Style Is Learned
                             <svg class="ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
                             </svg>
                         </a>
-                        <a href="#comparison" class="inline-flex items-center justify-center px-6 py-3 text-base font-semibold text-lw-navy bg-white border border-lw-gray-300 hover:border-lw-gray-400 rounded-lg transition-colors duration-200 cursor-pointer">
+                        <a href="#comparison" class="inline-flex items-center justify-center px-6 py-3 text-base font-semibold text-navy bg-white border border-lw-gray-200/80 hover:border-lw-gray-400 rounded-md transition-colors duration-150 cursor-pointer">
                             View a Styled Example
                         </a>
                     </div>
@@ -220,44 +197,44 @@
             </p>
 
             <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                <div class="p-6 bg-lw-gray-50 rounded-xl border border-lw-gray-100">
-                    <div class="w-10 h-10 bg-lw-gray-200 rounded-lg flex items-center justify-center mb-4 mx-auto">
-                        <svg class="w-5 h-5 text-lw-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
+                <div class="p-6 bg-white rounded-xl border border-lw-gray-200/80 shadow-sm">
+                    <div class="w-11 h-11 bg-lw-blue/10 rounded-lg flex items-center justify-center mb-4 mx-auto">
+                        <svg class="w-6 h-6 text-lw-blue opacity-80" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/>
                         </svg>
                     </div>
-                    <h3 class="font-semibold text-lw-navy mb-2">Robotic Output</h3>
+                    <h3 class="font-semibold text-navy mb-2">Robotic Output</h3>
                     <p class="text-sm text-lw-gray-600">Drafts that scream "AI wrote this" at first glance</p>
                 </div>
 
-                <div class="p-6 bg-lw-gray-50 rounded-xl border border-lw-gray-100">
-                    <div class="w-10 h-10 bg-lw-gray-200 rounded-lg flex items-center justify-center mb-4 mx-auto">
-                        <svg class="w-5 h-5 text-lw-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/>
+                <div class="p-6 bg-white rounded-xl border border-lw-gray-200/80 shadow-sm">
+                    <div class="w-11 h-11 bg-lw-blue/10 rounded-lg flex items-center justify-center mb-4 mx-auto">
+                        <svg class="w-6 h-6 text-lw-blue opacity-80" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M16.023 9.348h4.992v-.001M2.985 19.644v-4.992m0 0h4.992m-4.993 0l3.181 3.183a8.25 8.25 0 0013.803-3.7M4.031 9.865a8.25 8.25 0 0113.803-3.7l3.181 3.182m0-4.991v4.99"/>
                         </svg>
                     </div>
-                    <h3 class="font-semibold text-lw-navy mb-2">Excessive Revision</h3>
+                    <h3 class="font-semibold text-navy mb-2">Excessive Revision</h3>
                     <p class="text-sm text-lw-gray-600">Hours spent rewriting AI output to sound right</p>
                 </div>
 
-                <div class="p-6 bg-lw-gray-50 rounded-xl border border-lw-gray-100">
-                    <div class="w-10 h-10 bg-lw-gray-200 rounded-lg flex items-center justify-center mb-4 mx-auto">
-                        <svg class="w-5 h-5 text-lw-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636"/>
+                <div class="p-6 bg-white rounded-xl border border-lw-gray-200/80 shadow-sm">
+                    <div class="w-11 h-11 bg-lw-blue/10 rounded-lg flex items-center justify-center mb-4 mx-auto">
+                        <svg class="w-6 h-6 text-lw-blue opacity-80" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M18.364 18.364A9 9 0 005.636 5.636m12.728 12.728A9 9 0 015.636 5.636m12.728 12.728L5.636 5.636"/>
                         </svg>
                     </div>
-                    <h3 class="font-semibold text-lw-navy mb-2">Tool Abandonment</h3>
+                    <h3 class="font-semibold text-navy mb-2">Tool Abandonment</h3>
                     <p class="text-sm text-lw-gray-600">Attorneys try once, then never return</p>
                 </div>
 
-                <div class="p-6 bg-lw-gray-50 rounded-xl border border-lw-gray-100">
-                    <div class="w-10 h-10 bg-lw-gray-200 rounded-lg flex items-center justify-center mb-4 mx-auto">
-                        <svg class="w-5 h-5 text-lw-gray-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"/>
+                <div class="p-6 bg-white rounded-xl border border-lw-gray-200/80 shadow-sm">
+                    <div class="w-11 h-11 bg-lw-blue/10 rounded-lg flex items-center justify-center mb-4 mx-auto">
+                        <svg class="w-6 h-6 text-lw-blue opacity-80" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 010-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178z"/>
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"/>
                         </svg>
                     </div>
-                    <h3 class="font-semibold text-lw-navy mb-2">Recognition Fear</h3>
+                    <h3 class="font-semibold text-navy mb-2">Recognition Fear</h3>
                     <p class="text-sm text-lw-gray-600">Worry that clients or judges will notice</p>
                 </div>
             </div>
@@ -872,23 +849,24 @@
     </section>
 
     <!-- Final CTA Section -->
-    <section id="contact" class="py-24 px-4 bg-lw-navy">
-        <div class="max-w-4xl mx-auto text-center">
-            <h2 class="text-3xl md:text-4xl font-bold text-white mb-6">
+    <section id="contact" class="relative py-24 px-4 bg-navy">
+        <div class="absolute inset-0 cta-gradient" aria-hidden="true"></div>
+        <div class="relative max-w-4xl mx-auto text-center">
+            <h2 class="text-2xl md:text-3xl font-semibold text-white mb-6">
                 Ready to <span class="text-lw-blue">Humanize</span> Your Drafts?
             </h2>
-            <p class="text-lg text-lw-gray-300 mb-10 max-w-xl mx-auto">
+            <p class="text-lg text-lw-gray-300 mb-10 max-w-xl mx-auto leading-relaxed">
                 Upload a sample brief. We'll show you exactly how Motion Style Humanizer transforms robotic AI output into writing that sounds like you.
             </p>
 
             <div class="flex flex-col sm:flex-row items-center justify-center gap-4">
-                <a href="#" class="w-full sm:w-auto inline-flex items-center justify-center px-8 py-4 text-base font-semibold text-lw-navy bg-white hover:bg-lw-gray-100 rounded-lg transition-colors duration-200 cursor-pointer">
+                <a href="#" class="w-full sm:w-auto inline-flex items-center justify-center px-8 py-4 text-base font-semibold text-navy bg-white hover:bg-lw-gray-100 rounded-md cta-btn cursor-pointer">
                     Request a Style Walkthrough
                     <svg class="ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"/>
                     </svg>
                 </a>
-                <a href="#" class="w-full sm:w-auto inline-flex items-center justify-center px-8 py-4 text-base font-semibold text-white border border-white/30 hover:bg-white/10 rounded-lg transition-colors duration-200 cursor-pointer">
+                <a href="#" class="w-full sm:w-auto inline-flex items-center justify-center px-8 py-4 text-base font-semibold text-white border border-white/20 hover:border-white/40 rounded-md transition-colors duration-150 cursor-pointer">
                     Schedule a Demo
                 </a>
             </div>
